--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-webcam": "^3.0.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "face-api.js": "^0.22.2",
     "firebase": "^10.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
